<resources>
    <string name="app_name">Marinero</string>

    <string name="intro_sign_eror">There was an error. Try again later</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_towns">Towns</string>
    <string name="menu_beaches">Beaches</string>
    <string name="menu_harts">Your hearts</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_change_account">Change account</string>
    <string name="menu_logout">Log out</string>

    <string name="like_town">This town is added to your hearts!</string>

    <string name="title_activity_city_detail">City Detail</string>
    <string name="city_tab_text_1">Description</string>
    <string name="city_tab_text_2">Reviews</string>
    <string name="city_tab_text_3">Sunrise</string>

    <string name="review_list_error">There is no reviews for this sight.</string>
    <string name="review_add">You have added your review</string>

    <string name="error">Something went wrong :(</string>


    <string name="lorem">Sed ut perspiciatis unde omnis iste natus error sitvoluptatem accusantium doloremque laudantium, totam rem aperiam,
        eaque ipsa quae ab illo inventore veritatiset quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
        sit aspernatur aut odit aut fugit, sedquia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
        qui dolorem ipsum quia dolor sit amet,consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
        aliquam quaerat voluptatem. Ut enim adminima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
        consequatur? Quis autem vel eumiure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
