<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_explore"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_towns"
            android:icon="@drawable/ic_pin_town"
            android:title="@string/menu_towns" />
        <item
            android:id="@+id/nav_beaches"
            android:icon="@drawable/ic_beach"
            android:title="@string/menu_beaches" />
    </group>

    <item android:title="@string/menu_personal">
        <menu>
            <item
                android:id="@+id/nav_harts"
                android:icon="@drawable/ic_favorite"
                android:title="@string/menu_harts" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/nav_change_account"
        android:icon="@drawable/ic_about"
        android:title="@string/menu_change_account" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_about"
        android:title="@string/menu_logout" />
</menu>
